[package]
name = "lepkefing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

[dev-dependencies]
insta = "1.36.1"
serde = "1.0.197"
serde_json = "1.0.114"